--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -7,9 +7,18 @@ body {
 a {
   color: #00B7FF;
 }
-
 #g5 {
         width:200px; height:160px;
         display: inline-block;
         margin: 1em;
-      }
+     }
+#g6 {
+        width:200px; height:160px;
+        display: inline-block;
+        margin: 1em;
+     }
+#g7 {
+        width:200px; height:160px;
+        display: inline-block;
+        margin: 1em;
+     }
